Fix adaptive break point and layou on mobile

--- a/_sass/scss/_layout.scss
+++ b/_sass/scss/_layout.scss
@@ -121,7 +121,8 @@
   }
 
   .nav-search {
-    display: block;
+    // display: block;
+    display: none;
     height: unset;
     margin: 0px;
 
