--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -50,7 +50,7 @@ $blockquote-color-darkmode: #a8b2bd !default;
 $content-width: 1080px !default;
 
 $on-palm: 512px !default;
-$on-laptop: 960px !default;
+$on-laptop: 1080px !default;
 
 $nav-height: 100px !default;
 
